:bug: fix base spacing

--- a/src/scss/abstract/_positioning.scss
+++ b/src/scss/abstract/_positioning.scss
@@ -6,7 +6,7 @@ $zindex: 1;
 /**
  * Spacing
  */
-$base-spacing: em(32);
+$base-spacing: 32px;
 $half-base-spacing: $base-spacing / 2;
 
 /**
